--- a/wp5/basic/package.json
+++ b/wp5/basic/package.json
@@ -11,9 +11,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
+    "less": "^4.1.1",
+    "less-loader": "^7.3.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
     "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0"
   }
 }
