--- a/wp5/basic/package.json
+++ b/wp5/basic/package.json
@@ -16,7 +16,11 @@
     "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "core-js": "^3.8.3",
+    "eslint": "^7.19.0",
+    "eslint-loader": "^4.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "less": "^4.1.1",
