--- a/wp5/basic/package.json
+++ b/wp5/basic/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "build:local": " cross-env mode=local webpack"
   },
   "keywords": [],
   "author": "",
