--- a/wp5/basic/package.json
+++ b/wp5/basic/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --watch",
     "start": "webpack serve",
-    "build:local": "webpack --env=name=100"
+    "build:local": " cross-env mode=development webpack"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +15,10 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-decorators": "^7.12.12",
+    "@babel/plugin-transform-runtime": "^7.12.13",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@babel/runtime-corejs3": "^7.12.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "core-js": "^3.8.3",
@@ -33,6 +35,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.13",
+    "core-js": "^3.8.3",
     "css-loader": "^5.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
