--- a/wp5/basic/package.json
+++ b/wp5/basic/package.json
@@ -21,6 +21,7 @@
     "@babel/runtime-corejs3": "^7.12.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.8.3",
     "eslint": "^7.19.0",
     "eslint-loader": "^4.0.2",
@@ -28,7 +29,10 @@
     "html-webpack-plugin": "^4.5.1",
     "less": "^4.1.1",
     "less-loader": "^7.3.0",
+    "mini-css-extract-plugin": "^1.3.5",
     "node-sass": "^5.0.0",
+    "postcss-loader": "^5.0.0",
+    "postcss-preset-env": "^6.7.0",
     "sass-loader": "^10.1.1",
     "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0",
