--- a/wp5/5.flow/package.json
+++ b/wp5/5.flow/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
