--- a/other/ts/package.json
+++ b/other/ts/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.12.13",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.0",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2"
   }
