--- a/other/ts/tsconfig.json
+++ b/other/ts/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  // extends 扩展依赖
   "compilerOptions": {
     "target": "es5",
     "lib": [
@@ -20,10 +21,10 @@
     "noEmit": false,
     "jsx": "react-jsx"
   },
-  "include": [
+  "include": [ // 编译的包含文件
     "src"
   ],
-  "exclude": [
+  "exclude": [ // 排除编译的文件
     "src/**/*.test.tsx",
     "src/**/*.stories.tsx",
     "src/setupTests.ts"
