--- a/other/ts/package.json
+++ b/other/ts/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-transform-runtime": "^7.12.13",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
+    "react": "^17.0.2",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2"
   }
