--- a/wp5/jike_webpack/package.json
+++ b/wp5/jike_webpack/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack"
+    "webpack": "webpack",
+    "start": "webpack --watch",
+    "serve": "webpack serve"
   },
   "keywords": [],
   "author": "",
