--- a/loader/package.json
+++ b/loader/package.json
@@ -14,5 +14,8 @@
     "webpack": "^5.21.1",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "loader-runner": "^4.2.0"
   }
 }
