--- a/plugin/package.json
+++ b/plugin/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jszip": "^3.7.1",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1"
   }
