--- a/loader/package.json
+++ b/loader/package.json
@@ -16,6 +16,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "loader-runner": "^4.2.0"
+    "loader-runner": "^4.2.0",
+    "loader-utils": "^3.0.0",
+    "spritesmith": "^3.4.0"
   }
 }
